<resources>
    <string name="app_name">WordHunch</string>

    <!-- Network Strings -->
    <string name="RetroFit_API_URI">https://api.collinsdictionary.com/api/</string>
    <string name="RetroFit_API_Version">v1/</string>
    <string name="RetroFit_API_Dict">dictionaries/</string>
    <string name="RetroFit_API_Fail">Could not connect to the server. Please check your internet connection.</string>
    <string name="RetroFit_API_DictCode">english</string>

    <string name="RetroFit_API_WordListURI">https://raw.githubusercontent.com/dakshsrivastava/</string>

    <!-- Word Link strings -->
    <string name="WordList_Empty">Words you enter will appear here!</string>

    <!-- About pages -->
    <string name="AboutPage_Heading">Hi!</string>
    <string name="AboutPage_Intro">Like it? Hate it? Tell me about it!\ndakshsrivastava@gmail.com</string>
    <string name="AboutPage_heading_version">Version</string>
    <string name="AboutPage_heading_github">GitHub</string>
    <string name="AboutPage_text_github">Tap to View this project on GitHub.</string>
    <string name="AboutPage_heading_libraries">OpenSource Libraries</string>
    <string name="AboutPage_text_libraries">Tap to view licenses</string>

    <!-- Settings Pages -->
    <string name="SettingsPage_Header">Settings</string>
    <string name="SettingsPage_Intro">Try not to change too much or you\'ll break something</string>
</resources>