<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.daksh.wordhunch.Menu.ActivityAbout">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/aboutPage_introBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_sharp_corners_orange">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AboutPage_Heading"
            android:layout_marginStart="15dp"
            android:textColor="@color/WhiteTextColorOne"
            android:textSize="30sp"
            android:focusable="false"
            android:clickable="false"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/aboutPage_introBox_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="false"
            android:layout_marginStart="14dp"
            android:paddingBottom="10dp"
            android:text="@string/AboutPage_Intro"
            android:textColor="@color/WhiteTextColorOne"
            android:textAppearance="@style/MyTextAppearance.Large.White" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/aboutPage_heading_version_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/aboutPage_heading_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textAppearance="@style/MyTextAppearance.Large.Black"
            android:text="@string/AboutPage_heading_version"/>

        <TextView
            android:id="@+id/aboutPage_text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textAppearance="@style/MyTextAppearance.Normal.Black"
            android:layout_below="@id/aboutPage_heading_version" />

    </RelativeLayout>

    <View
        android:id="@+id/aboutPage_div_one"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/purpleLight"
        android:alpha="0.2"/>

    <RelativeLayout
        android:id="@+id/aboutPage_heading_github_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/aboutPage_heading_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textAppearance="@style/MyTextAppearance.Large.Black"
            android:text="@string/AboutPage_heading_github"/>

        <TextView
            android:id="@+id/aboutPage_text_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textAppearance="@style/MyTextAppearance.Normal.Black"
            android:layout_below="@id/aboutPage_heading_github"
            android:text="@string/AboutPage_text_github"/>
    </RelativeLayout>

    <View
        android:id="@+id/aboutPage_div_two"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/purpleLight"
        android:alpha="0.2"/>

    <RelativeLayout
        android:id="@+id/aboutPage_heading_libraries_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/aboutPage_heading_libraries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textAppearance="@style/MyTextAppearance.Large.Black"
            android:text="@string/AboutPage_heading_libraries"/>

        <TextView
            android:id="@+id/aboutPage_text_libraries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textAppearance="@style/MyTextAppearance.Normal.Black"
            android:layout_below="@id/aboutPage_heading_libraries"
            android:text="@string/AboutPage_text_libraries"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/purpleLight"
        android:alpha="0.2"/>
</LinearLayout>